--- a/Assignment 01.ipynb
+++ b/Assignment 01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter First name abhi\n",
-      "Enter Second name prasad\n",
-      "ihba   dasarp\n"
+      "Enter First name Abhi\n",
+      "Enter Second name Prasad\n",
+      "ihbA   dasarP\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter list 1,2,3,4,5\n",
-      "[1, 2, 3, 4, 5]\n"
+      "Enter list 1,2,3,4,5,6\n",
+      "[1, 2, 3, 4, 5, 6]\n"
      ]
     }
    ],
@@ -146,6 +146,7 @@
    "metadata": {},
    "source": [
     "Question 2 :Create the below pattern using nested for loop in Python.\n",
+    "               \n",
     "                *\n",
     "                * *\n",
     "                * * *\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,15 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input Worddadsfceferfreferfe\n",
-      "efreferfrefecfsdad\n"
+      "Input Worddsdefghtyjyukmfdsvhnghfvg\n",
+      "gvfhgnhvsdfmkuyjythgfedsd\n"
      ]
     }
    ],
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,12 +256,12 @@
       "WE, THE PEOPLE OF INDIA\n",
       "\t having solemnly resolved to constitute India into a SOVEREIGN\n",
       "\t\t SOCIALIST, SECULAR, DEMOCRATIC REPUBLIC\n",
-      "\t\t\t   and to secure to all its citizens\n"
+      "\t\t   and to secure to all its citizens\n"
      ]
     }
    ],
    "source": [
-    "print(st[0]+\",\"+st[1] +'\\n' +'\\t' + st[2] +'\\n'+'\\t\\t' + st[3]+','+st[4] +','+st[5][0:20]+'\\n' + '\\t\\t\\t  '+ st[5][20:])"
+    "print(st[0]+\",\"+st[1] +'\\n' +'\\t' + st[2] +'\\n'+'\\t\\t' + st[3]+','+st[4] +','+st[5][0:20]+'\\n' + '\\t\\t  '+ st[5][20:])"
    ]
   },
   {
