--- a/Assignmet 02.ipynb
+++ b/Assignmet 02.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,7 @@
      "output_type": "stream",
      "text": [
       "28\n",
+      "-26\n",
       "abcde\n"
      ]
     }
@@ -30,25 +31,25 @@
     "#This function should work for only homogenous array only\n",
     "def myReduce(funct, itr):\n",
     "    if isinstance(itr[0],str):\n",
-    "        res =\"\"\n",
+    "        res = funct(itr[0],itr[1])\n",
     "    else :\n",
-    "        res = 0\n",
-    "    # \"try catch\" for odd number elements in the list\n",
+    "        res = funct(itr[0],itr[1])\n",
+    "    # \"try catch\" for string arithematic\n",
     "    try:\n",
-    "        for i in range(0,len(itr),2):\n",
-    "            res +=  funct(itr[i],itr[i+1])\n",
-    "    except IndexError :\n",
-    "        res = funct(res ,itr[i])\n",
+    "        for i in range(2,len(itr),1):\n",
+    "            res =  funct(res,itr[i])\n",
     "    except TypeError:\n",
     "        print(\"Type Error Happen\")\n",
-    "    except:\n",
-    "        print(\"Some other Exception happen\")\n",
+    "    except Exception as ex:\n",
+    "        print(\"This happened \".ex)\n",
     "    return res\n",
     "li = [1,2,3,4,5,6,7]\n",
     "str_li = ['a','b','c','d','e']\n",
     "#sr = ['a',223,334,'dc']\n",
     "a = lambda a,b : a+b\n",
+    "a1 = lambda a,b : a-b\n",
     "print(myReduce(a,li))\n",
+    "print(myReduce(a1,li))\n",
     "print(myReduce(a,str_li))"
    ]
   },
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
