--- a/pandas_2.ipynb
+++ b/pandas_2.ipynb
@@ -516,7 +516,7 @@
     }
    ],
    "source": [
-    "#5. Distribution of male and female born count by states Histogram\n",
+    "#5. Distribution of male and female born count by states BarGraph\n",
     "ax ,fig = plt.subplots(ncols=1,nrows=1,figsize= (20,40))\n",
     "plt.barh(l,t.get_values(),)\n",
     "plt.show()"
