--- a/Stats Assignment 4.ipynb
+++ b/Stats Assignment 4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,18 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F Statistic  9.747205503009457\n"
+      "F Statistic  9.747205503009457\n",
+      "Pvalue 0.003059754143443061\n"
      ]
     }
    ],
    "source": [
+    "#h0 : mu1 == mu2 == m3\n",
+    "#h1 : At least one of the means is different from the others\n",
+    "\n",
     "def oneway_anova(*args):\n",
     "    mu_col = []\n",
     "    for i in args:\n",
@@ -148,8 +152,10 @@
     "\n",
     "f_st,p_val = oneway_anova(gr1,gr2,gr3)\n",
     "print('F Statistic ',f_st)\n",
+    "print('Pvalue' , p_val)\n",
+    "#In scipy.stats module f_oneway gives same result \n",
     "\n",
-    "#In scipy.stats module f_oneway gives same result "
+    "#Since Pvalue  < 0.05 we Reject the h0 and At least one of the means is different from the others"
    ]
   },
   {
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +197,13 @@
     "\n",
     "print(\"P_value \", pval)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
